--- a/latihan-website/assets/style/style.css
+++ b/latihan-website/assets/style/style.css
@@ -157,4 +157,7 @@ h2,h3{
         padding-bottom: 20px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
+    img{
+        height:25vh;
+    }
 }
